# Feral

./: .clang-format  .gitignore  .gitlab-ci.yml  BUILDING  CMakeLists.txt  DEPENDENCIES  Doxyfile  Dummy.c  Formatting.txt  LICENSE  Makefile  Makerules  README.md  WORKING  Wishlist  bochsrc.txt  build.sh  clangformat.sh  compile.sh  gen_testfile.sh  setup-darwin.sh  setup.sh  userspace-scribbles  vm_test.sh  vm_test_gdb.sh  vm_test_noopt.sh  vm_test_noopt_gdb.sh
Documentation/: code_of_conduct.markdown  compat.md  syscalls.md  system_initialization.markdown
arch/: Makefile  README
arch/aarch64/: Archrules.mk  Makefile  extras.c  linkin.lld
arch/aarch64/boot/: boot.S
arch/riscv/boot/: README  init.S
arch/x86_64/: Archrules.mk  Makefile  archstart.c  extras.c  grub.cfg  linkin-efi.lld  linkin.lld
arch/x86_64-bios/: stub
arch/x86_64-efi/: Makefile  boot.c  grub.cfg
arch/x86_64-efi/boot/: init.asm  init.c
arch/x86_64-efi/vga/: vga_core.c
arch/x86_64/boot/: helper.asm  init.asm  init64.asm
arch/x86_64/vga/: vga_core.c
bootloader/: Makefile  boot.c  boot.ini  loader.c
cmake/: x86_64-pc.cmake
daemon/mcp/: mcp.c
daemon/phone/: phone.c
drivers/: CMakeLists.txt  Dummy.c  Makefile  loading-drivers
drivers/chipset/x370/: chipset_x370_zen.h
drivers/chipset/x399/: chipset_x399_zen.h
drivers/chipset/x470/: chipset_x470_zen.h
drivers/chipset/x570/: chipset_x570_zen.h
drivers/chipset/x79/: chipset_sandy_extreme.h
drivers/devices/: Makefile
drivers/devices/inc/: colors.h
drivers/devices/mice/: mice_common.h
drivers/devices/serial/: Makefile  SerialDriver.cpp  serial.c  serial.h
drivers/gpu/alpha_lyrae/inc/: lyrae.h
drivers/gpu/inc/: README  cluster.h  vidcore.h
drivers/gpu/nemesis-voltaire/: README
drivers/gpu/vga/: README
drivers/gpu/vga/inc/: vgadriver.h
drivers/net/e1000/: Placeholder.md
drivers/proc/: Makefile
drivers/proc/elf/: elf.h
drivers/proc/elf-general/: elf.h
drivers/serial/: CMakeLists.txt  serial.c  serial.h
drivers/serial/kshell/: kshell.c  kshell.h
drivers/vega10/: vega10.h
drivers/wayapi/: handler.h
fs/extFS/: README
fs/fat32/: fat32.h
fs/hpfs/: hpfs.h
fs/nx-files/: nx.h  vol.h
hooks/: pre-commit
inc/: kern_ver.h
inc/arch/: processor.h
inc/arch/x86_64/: cpufuncs.h  cpuio.h
inc/bogus/: README  fluff.h
inc/ddk/: README  frlddk-old.h  frlddk.h  frldev.h  frlexec.h  interface.h
inc/efi/: efi.h  efiapi.h  efistatus.h
inc/feral/: feralstatus.h  feraluser.h  handle.h  memory.h  object.h  stdtypes.h  string.h
inc/feral/boot/: kibootstruct.h
inc/feral/io/: iopkt.h
inc/feral/kern/: frlos.h  ki.h
inc/feral/port/: packet.h  port.h
inc/feral/proc/: process.h
inc/fs/: fs.h
inc/gpuid/: README
inc/inet/: arpa.h  ipv4.h
inc/io/: rms.h
inc/libreefi/: efiapi.h  efibserv.h  eficommon.h  efirt.h
inc/multiboot/: multiboot2.h
inc/net/renegade/: protocol.h
inc/renegade/: ren.h
io/: DESIGN  Makefile  iomgr.c
io/fs/dosfs/: README
io/fs/extfs/: ext2.c
io/fs/nx-files/: README
io/fs/reiser4/: README.md
kern/: CMakeLists.txt  Makefile  kernel_main.c  kernel_memfuncs.c  kernel_printfuncs.c  kernel_private.c  ki.c  krnl_private.c  krnlfun.c  krnlfuncs.c  krnlstring.c  objmgr.c
kern/arch/: Makefile
kern/arch/aarch64/: Makefile  extras.c  mm.asm
kern/arch/rv64gc/u500/: u540.c
kern/arch/x86_64/: CMakeLists.txt  Makefile  archstart.c  asm_helpers.c  charmap.inl  extras.c  interrupts.c  machinedep.c  mm.asm
kern/arch/x86_64/boot/: helper.asm  init.asm  init64.asm
kern/arch/x86_64/mm/: mm.asm  paging.c
kern/arch/x86_64/vga/: vga_driver.c
kern/driver/: frlddk.c
kern/driver/cynic/: context.h
kern/drivers/nemesis-pythagoras/: README
kern/entry/: CMakeLists.txt  Makefile  charmap_default.inl  efientry.c  mb2entry.c
kern/entry/arch/x86_64/: init-efi.asm
kern/inc/: kcommon.h  kern_ver.h.in  krnl.h  sec.h
kern/inc/arch/: processor.h
kern/inc/arch/x86_64/: cpufuncs.h  cpuinfo.h  cpuio.h
kern/inc/arch/x86_64/idt/: idt.h
kern/inc/arch/x86_64/mm/: pageflags.h  paging.h
kern/inc/arch/x86_64/vga/: vga.h  vgaregs.h
kern/inc/feral/kern/: frlos.h  ki.h  krnlbase.h  krnlbinfuncs.h  krnlentry.h  krnlfirmware.h  krnlfuncs.h  krnlmacro.h  krnlmemfuncs.h  krnlprocessor.h  krnlstringfuncs.h
kern/inc/feral/mm/: page.h
kern/inc/feral/proc/: process.h
kern/inc/gpuid/: README  gpu.h
kern/inc/libreefi/: efi.h  efiapi.h  efibserv.h  eficommon.h  efifs.h  efihandler.h  efiprotocols.h  efirt.h  efistatus.h  efivid.h
kern/inc/mm/: heap.h  mm.h  mmcommon.h  page.h
kern/inc/multiboot/: multiboot2.h
kern/ipc/: NOTES
kern/lib/: CMakeLists.txt  kernel_binfuncs.c  kernel_debugfuncs.c  kernel_memfuncs.c  kernel_printfuncs.c  kernel_stringfuncs.c
kern/mb2/: mb2entry.c
kern/mm/: CMakeLists.txt  createpage.c  heap.c  mmsetup.c  treealloc.txt
kern/mm/x86_64/: createpage.c
kern/net/: dob.h  udp.h
kern/net/inet/: arp.h  ipv4.h
kern/proc/: frlproc.h  procinfo.h
kern/sched/: RULES  procinfo.h
libcpu/: PLANS
libcpu/aarch64/: aarchinterface.h
libcpu/power9/: powerinterface.h
libcpu/x86_64/: x86_64interface.h
libos/: README
libos/libmach/: ISSUES  Makefile  STRUCTURE  mach.h
libos/libmach/mach/: boolean.h  error.h  kern_return.h  machine.h  message.h  port.h  std_types.h  version.h
libos/nix/: README  limits.h  unistd.h
libos/nix/sys/: stat.h
libos/waypoint/: Makefile  Program_Loading  Syscalls  features.h  gui-process  waypoint.h
libos/waypoint/Driver/: handler.h
libos/waypoint/inc/: console.h  features.h  resources.h  waypoint.h
libos/waypoint/shell/: shell.c
libos/waypoint/tests/: testmsg.c
mm/: Cargo.toml  Makefile  setup.sh
mm/src/: lib.rs
proc/: Cargo.toml  Makefile  theory  x86_64-pc-feral-gnu.json
proc/src/: lib.rs
sec/: CMakeLists.txt  Makefile  README.md  sec.c  stackcheck.c
sec/secsrv/: hydrogen.c  hydrogen.h
tests/: CMakeLists.txt  Makefile  kern_ver.h  test_main.c
tests/inc/: defines.h  x86-stub.h
tests/x86/: paging_test.c
tools/: kconfig.c
tools/kconfig/: Makefile  kconfig.c
tools/kunit/: assertTrue.h
(+9 files in other folders)
