# why would you turn this off anyway??
OPTION(SERIAL_DRIVER "Enable UART Driver" ON)

SET(DRIVERS_OBJECT_LIST "")
INCLUDE_DIRECTORIES(../kern/inc)

IF (SERIAL_DRIVER)
ADD_SUBDIRECTORY(serial)
LIST(APPEND DRIVERS_OBJECT_LIST $<TARGET_OBJECTS:DriverSerial>)
ENDIF(SERIAL_DRIVER)

ADD_LIBRARY(Drivers OBJECT Dummy.c ${DRIVERS_OBJECT_LIST})

