LIST(APPEND KRNL_SECURITY_SOURCES sec.c)
LIST(APPEND KRNL_SECURITY_SOURCES stackcheck.c)

LIST(APPEND KRNL_SECURITY_SOURCES secsrv/hydrogen.c)
LIST(APPEND KRNL_SECURITY_SOURCES secsrv/hydrogen.h)

INCLUDE_DIRECTORIES(../kern/inc)

ADD_LIBRARY(Security ${KRNL_SECURITY_SOURCES} ${KRNL_SECURITY_HEADERS})
