LIST(APPEND KERNEL_MAIN_ARCH_SOURCES archstart.c)
LIST(APPEND KERNEL_MAIN_ARCH_SOURCES asm_helpers.c)
LIST(APPEND KERNEL_MAIN_ARCH_SOURCES interrupts.c)

LIST(APPEND KERNEL_MAIN_ARCH_SOURCES boot/helper.asm)
LIST(APPEND KERNEL_MAIN_ARCH_SOURCES boot/init.asm)
LIST(APPEND KERNEL_MAIN_ARCH_SOURCES boot/init64.asm)


LIST(APPEND KERNEL_MAIN_ARCH_SOURCES mm/mm.asm)
LIST(APPEND KERNEL_MAIN_ARCH_SOURCES mm/paging.c)

LIST(APPEND KERNEL_MAIN_ARCH_SOURCES vga/vga_driver.c)

ADD_LIBRARY(ArchLib OBJECT ${KERNEL_ARCH_HEADERS} ${KERNEL_MAIN_ARCH_SOURCES})
